--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>GIT-TREENI</h1>
 
     <h2>Tärkeää</h2>
+    <p> lorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem 
+        ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem 
+        ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
   </body>
 </html>
