lisätty tekstikappale jonka avulla demotaan haaroittumista

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p> lorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem 
         ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem 
         ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+
+        <p> testikappale, joka commitataan masteriin leiskakokeen luomisen jälkeen</p>
   </body>
 </html>
