--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="tyyli.css" />
   </head>
   <body>
-    <h1>GIT-TREENI</h1>
+    <h1>GIT-TREENI - Päivitetty otsikko</h1>
 
     <h2>Tärkeää</h2>
     <p> lorem ipsum lorem ipsumlorem ipsumlorem ipsumlorem 
