--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem 
         ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
 
-        <p> testikapdffdfdfdfdpale, joka commitataan masteriin leiskakokeen luomisen jälkeen</p>
+        <p> testin testi testikapdffdfdfdfdpale, joka commitataan masteriin leiskakokeen luomisen jälkeen</p>
   </body>
 </html>
